syntax = "proto3";

package org.e2eelab.lib.protobuf;

import "e2ee_address.proto";

message e2ee_group_session {
    uint32 version = 1;
    bytes session_id = 2;
    e2ee_address session_owner = 3;
    e2ee_address group_address = 4;
    repeated e2ee_address member_addresses = 5;
    uint32 sequence = 6;
    bytes chain_key = 7;
    bytes signature_private_key = 8;
    bytes signature_public_key = 9;
    bytes associated_data = 10;
}